[tool.poetry]
name = "ufo-cesium"
version = "0.1.0"
description = ""
authors = ["Giovann Wah <giovann.wah92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
django-environ = "^0.7.0"
django-cors-headers = "^3.8.0"
djangorestframework = "^3.12.4"
PyJWT = "^2.3.0"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"
strawberry-django-plus = "^1.26.1"
geopy = "^2.2.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pydantic = "^1.8.2"
typer = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
